--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Liveness Check</title>
     <script>
         document.addEventListener("DOMContentLoaded", function (event) {
             var ws = new WebSocket("ws://" + document.location.host + "/ws");
